<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wimoto</string>
    <string name="action_settings">Settings</string>
    
    <!-- Alerts -->
    <string name="alert_ble_not_supported">Bluetooth low energy is not supported on this device.</string>
    
    <!-- Left Menu Items -->
    <string name="left_menu_add_sensor">Add New Sensor</string>
    <string name="left_menu_settings">Settings</string>
    <string name="left_menu_help">Help</string>
    
    <string name="delete_button">Delete</string>
    
    <!-- Sensor screens values -->
     <string name="sensor_update">Update</string> 
     <string name="sensor_rrsi">RSSI</string>
     <string name="sensor_rrsi2">RSSI:</string>
     <string name="sensor_two_hyphens">--</string>  
     <string name="sensor_just_now">Just now</string>  
     <string name="sensor_cm">cm</string>
     <string name="sensor_celsius">˚C</string>
     <string name="sensor_lux">lux</string> 
     <string name="sensor_percent">%</string> 
     <string name="sensor_hi">Hi</string> 
     <string name="sensor_lo">Lo</string>
     <string name="sensor_empty"></string>
     <string name="sensor_save">Save</string>
     <string name="sensor_cancel">Cancel</string>
     
     <string name="sensor_zero">No sensors added yet.</string> 
     <string name="sensor_add">Tap here to add sensor&#8230;</string> 
     
     <!-- Sensor Names -->
     <string name="sensor_climate">Wimoto_Climate</string>
     <string name="sensor_climate_demo">Wimoto_Climate_Demo</string> 
     <string name="sensor_grow">Wimoto_Grow</string> 
     <string name="sensor_sentry">Wimoto_Sentry</string> 
     <string name="sensor_thermo">Wimoto_Thermo</string> 
     <string name="sensor_thermo_demo">Wimoto_Thermo_Demo</string> 
     <string name="sensor_water">Wimoto_Water</string> 
     
     <!-- Sensor alerts -->
     <string name="sensor_climate_alert_temperature">Current temperature is out of range.</string>
     <string name="sensor_climate_alert_humidity">Current humidity is out of range.</string>
     <string name="sensor_climate_alert_light">Current light is out of range.</string>    
     <string name="sensor_thermo_alert_temperature">Current temperature is out of range.</string>
     <string name="sensor_thermo_alert_probe">Current probe temperature is out of range.</string>       
     <string name="sensor_grow_alert_light">Current light is out of range.</string>
     <string name="sensor_grow_alert_moisture">Current moisture is out of range.</string>
     <string name="sensor_grow_alert_temperature">Current temperature is out of range.</string>     
     <string name="sensor_sentry_alert_accelerometer">Accelerometer is detected a motion.</string>
     <string name="sensor_sentry_alert_infrared">Infrared sensor is detected a motion.</string>     
     <string name="sensor_water_alert_contact">Contact sensor is detected a water.</string>
     <string name="sensor_water_alert_level">Current water level is out of range.</string>
     
     <!-- Found sensor screen -->
     <string name="sensors_found">Sensors Found</string>
     
     <!-- Settings screen -->
     <string name="settings_title">Settings</string>
     <string name="settings_temperature_units">Temperature units</string>
     
     <!-- Help screen -->
     <string name="help_title">Help</string>
     <string name="help_url">www.wimoto.com/support</string> 
     
     <!-- AlertPicker screen -->
     <string name="alert_cancel">Cancel</string>
     <string name="alert_save">Save</string> 

</resources>
