<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_sensor_water"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >
        
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/sensor_screen_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            android:src="@drawable/droplet" />

                        <com.wimoto.app.widgets.sparkline.LineSparkView
                            android:id="@+id/contactSparkView"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/contactTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|right"
                            android:text="@string/sensor_two_hyphens"
                            android:textColor="@color/color_white"
                            android:textSize="42sp" />

                        <TextView
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:gravity="top"
                            android:text="@string/sensor_empty"
                            android:textColor="@color/color_white"
                            android:textSize="24sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contactAlarmLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/alarm_clock_white" />

                    <com.wimoto.app.widgets.AnimationSwitch
                        android:id="@+id/contact_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:checked="false"
                        android:clickable="true" />

                    <TextView
                        android:id="@+id/contactLowTextView"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/sensor_lo"
                        android:textColor="@color/color_white"
                        android:textSize="17sp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/contactHighTextView"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:text="@string/sensor_hi"
                        android:textColor="@color/color_white"
                        android:textSize="17sp"
                        android:visibility="invisible" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            android:src="@drawable/droplet" />

                        <com.wimoto.app.widgets.sparkline.LineSparkView
                            android:id="@+id/levelSparkView"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/levelTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|right"
                            android:text="@string/sensor_two_hyphens"
                            android:textColor="@color/color_white"
                            android:textSize="42sp" />

                        <TextView
                            android:layout_width="35dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginLeft="5dp"
                            android:text="@string/sensor_cm"
                            android:textColor="@color/color_white"
                            android:textSize="24sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/levelAlarmLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/alarm_clock_white" />

                    <com.wimoto.app.widgets.AnimationSwitch
                        android:id="@+id/level_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:checked="false"
                        android:clickable="true" />

                    <TextView
                        android:id="@+id/levelLowTextView"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/sensor_lo"
                        android:textColor="@color/color_white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/levelHighTextView"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:text="@string/sensor_hi"
                        android:textColor="@color/color_white"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.wimoto.app.screens.sensor.views.SensorFooterView
        android:id="@+id/sensorFooterView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp" />

</RelativeLayout>