<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_sensor_thermo"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/sensor_screen_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:adjustViewBounds="true"
                        android:src="@drawable/infrared_thermometer" />

                    <com.wimoto.app.widgets.sparkline.LineSparkView
                        android:id="@+id/temperatureSparkView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/temperatureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sensor_two_hyphens"
                        android:textColor="@color/color_white"
                        android:textSize="50sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sensor_celsius"
                        android:textColor="@color/color_white"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/temperatureAlarmLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="invisible" >

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/alarm_clock_white" />

                    <com.wimoto.app.widgets.AnimationSwitch
                        android:id="@+id/temperature_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:checked="true"
                        android:clickable="true" />

                    <TextView
                        android:id="@+id/temperatureHighTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/sensor_hi"
                        android:textColor="@color/color_white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/temperatureLowTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:text="@string/sensor_lo"
                        android:textColor="@color/color_white"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:adjustViewBounds="true"
                        android:src="@drawable/thermometer" />

                    <com.wimoto.app.widgets.sparkline.LineSparkView
                        android:id="@+id/probeSparkView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/probeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sensor_two_hyphens"
                        android:textColor="@color/color_white"
                        android:textSize="50sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sensor_celsius"
                        android:textColor="@color/color_white"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/probeAlarmLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="invisible" >

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/alarm_clock_white" />

                    <com.wimoto.app.widgets.AnimationSwitch
                        android:id="@+id/probe_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:checked="true"
                        android:clickable="true" />

                    <TextView
                        android:id="@+id/probeHighTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/sensor_hi"
                        android:textColor="@color/color_white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/probeLowTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:text="@string/sensor_lo"
                        android:textColor="@color/color_white"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.wimoto.app.screens.sensor.views.SensorFooterView
        android:id="@+id/sensorFooterView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp" />

</RelativeLayout>